<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".view.SignUpAsBusinessFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/back"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buyer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_account"
                android:textColor="@color/registration_bg"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buyer_txt"
                android:layout_marginTop="15dp"
                android:text="@string/buyer_placeholder"
                android:textColor="@color/registration_bg"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/transparent_bg_button"
            android:text="@string/prompt_sign_up"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seller_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller_account"
                android:textColor="@color/registration_bg"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seller_txt"
                android:layout_marginTop="15dp"
                android:text="@string/seller_placeholder"
                android:textColor="@color/registration_bg"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/transparent_bg_button"
            android:text="@string/prompt_sign_up"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/affiliate_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affiliate_account"
                android:textColor="@color/registration_bg"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/affiliate_txt"
                android:layout_marginTop="15dp"
                android:text="@string/affiliate_placeholder"
                android:textColor="@color/registration_bg"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/transparent_bg_button"
            android:text="@string/prompt_sign_up"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>


</LinearLayout>