<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <data>
        <variable
            name="viewModel"
            type="com.example.sofi.sylcar.mvvm.model.viewmodel.RegistrationViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rvLay"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/log_into_sylkar"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="100dp"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    />
                <!--app:addTextChangedListener="@{viewModel.getEmailTextWatcher}"-->

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    app:addTextChangedListener="@{viewModel.getPasswordTextWatcher}"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/error_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/error_msg_log_in"
                    android:textColor="@color/proceed_btn_bg"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/error" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/trouble_msg"
                android:textColor="@color/trouble_msg"
                android:textSize="16sp" />

        </LinearLayout>


        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/proceed_btn_bg"
            android:text="@string/proceed"
            android:textColor="@color/proceed_deactive_text" />
        <!--android:onClick="@{viewModel::onLoginClicked}"-->


    </RelativeLayout>

</layout>