<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="launcherFragment"
            type="com.example.sofi.sylcar.view.LauncherFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:orientation="vertical"
            tools:context=".StartActivityView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="280dp"
                    android:text="@string/b2b_marketplace_solutions"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:onClick="@{() -> launcherFragment.onLoginClicked()}"
                    android:padding="15dp"
                    android:text="@string/prompt_log_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/individual_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{() -> launcherFragment.onRegistrationClicked()}"
                    android:padding="15dp"
                    android:text="@string/join_as_individual"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/signup_business_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="@{() -> launcherFragment.onSignUpClicked()}"
                    android:padding="15dp"
                    android:text="@string/prompt_sign_up_as_business"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</layout>